# Loan_Prediction_model

./: README.md  app.py  load_data.py  loan_ml.db  pyproject.toml  requirements.txt  ui.py
db/: database.py  hello.py
models/: loan_model.joblib  logistic_model.py
routes/: api_routes.py
services/: __init__.py  applicant_service.py  prediction_service.py
